# duckflock

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  duckflock.example.yaml
.githooks/: pre-commit  pre-push
crates/duckflock-core/: Cargo.toml
crates/duckflock-core/src/: audit.rs  auth.rs  catalog.rs  config.rs  error.rs  identity.rs  lib.rs
crates/duckflock-engine/: Cargo.toml
crates/duckflock-engine/src/: catalog.rs  config.rs  engine.rs  error.rs  execute.rs  lib.rs  pool.rs
crates/duckflock-engine/tests/: integration_test.rs
crates/duckflock-gateway/: Cargo.toml
crates/duckflock-gateway/src/: lib.rs
crates/duckflock-server/: Cargo.toml
crates/duckflock-server/src/: main.rs
scripts/: setup.sh
