[workspace]
members = [
    "crates/duckflock-core",
    "crates/duckflock-engine",
    "crates/duckflock-gateway",
    "crates/duckflock-server",  # binary crate, publishes as "duckflock"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/walden-data/duckflock"
homepage = "https://github.com/walden-data/duckflock"
description = "A persistent PostgreSQL-compatible endpoint for DuckLake"
rust-version = "1.84"

[workspace.dependencies]
# DuckDB
duckdb = { version = "1.5", features = ["bundled"] }

# Arrow / IPC
arrow = "57"
arrow-array = "57"
arrow-ipc = "57"
arrow-schema = "57"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# PostgreSQL wire protocol
pgwire = { version = "0.38", features = ["server-api-ring"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates
duckflock-core = { path = "crates/duckflock-core" }
duckflock-engine = { path = "crates/duckflock-engine" }
duckflock-gateway = { path = "crates/duckflock-gateway" }
