[package]
name = "duckflock-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DuckDB execution engine for DuckFlock"

[dependencies]
duckflock-core.workspace = true
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
duckdb.workspace = true
prometheus.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
