[package]
name = "duckflock-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DuckFlock server binary"

[[bin]]
name = "duckflock"
path = "src/main.rs"

[dependencies]
duckflock-core.workspace = true
duckflock-engine.workspace = true
duckflock-gateway.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
